--- a/b.html
+++ b/b.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>B</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/master_abcd-master.css?crc=231820627"/>
-  <link rel="stylesheet" type="text/css" href="css/b.css?crc=16643165" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_abcd-master.css?crc=3832813686"/>
+  <link rel="stylesheet" type="text/css" href="css/b.css?crc=3891188728" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_abcd-master.css?crc=4088396053"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_b.css?crc=3868591038" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_abcd-master.css?crc=199391760"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_b.css?crc=517239482" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -30,10 +30,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/abel:n4:default;open-sans:n4:default.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/PoU8WqA6g4d8s5sJ8I_uDsEoGHCd5anWCa1bRlciHECfeCtgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MKGHfF7zMsMMeMt6MKGHfFczMsMMeMb6MqGIQWmDZZMg_v-K339.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/3Hg0ZKvAxRSY9A0ECClSCsdvgQEwDJ5ZiYlIO3IfPE6feCvgfH06N6IPH2b3wDbhw2FLwDBR5QjtwQ8qjcm8jDjawhmcZ26oFhIXFAF8wDmKZQq-jKG0jcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOe4yjhlDieB1ZPo1jWiCZW4udc8X-Ao1OcNkZkoyiPUaiaS0jcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuJ68c-W4yOWFyd1w7f6Rin3IbMg62JMJ7f6R-n3IbMg65JMJ7f6RZn3IbMg6IJM4HgIuuShAbM-7dUvbB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -58,8 +58,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="ContainerGroup clearfix" id="u29690"><!-- stack box -->
        <div class="Container invi clearfix grpelem" id="u29691"><!-- group -->
         <div class="clearfix grpelem shared_content" id="pu29693-3" data-content-guid="pu29693-3_content"><!-- column -->
-         <a class="nonblock nontext clearfix colelem" id="u29693-3" href="index.html" data-href="page:U782"><!-- content --><p>&nbsp;</p></a>
+         <div class="clearfix colelem" id="u29693-3"><!-- content -->
+          <p>&nbsp;</p>
+         </div>
          <a class="nonblock nontext clearfix colelem" id="u29704-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u29704-2">FEATURED</p></a>
+         <a class="nonblock nontext clip_frame colelem" id="u29695" href="http://gawleruniting.org.au"><!-- svg --><img class="svg temp_no_img_src" id="u29696" data-orig-src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
         </div>
         <a class="nonblock nontext clearfix grpelem shared_content" id="u29699-4" href="bible-readings.html" data-href="page:U7278" data-content-guid="u29699-4_content"><!-- content --><p id="u29699-2">READINGS</p></a>
         <div class="clearfix grpelem shared_content" id="pu29694-4" data-content-guid="pu29694-4_content"><!-- column -->
@@ -67,10 +70,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <a class="nonblock nontext clearfix colelem" id="u29692-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u29692-2">DISCIPLESHIP</p></a>
          <a class="nonblock nontext clearfix colelem" id="u29703-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u29703-2">EVENTS</p></a>
          <a class="nonblock nontext clearfix colelem" id="u29700-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u29700-2">OPENLIFE</p></a>
+         <div class="clearfix colelem" id="pu29701"><!-- group -->
+          <a class="nonblock nontext clip_frame grpelem" id="u29701" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg temp_no_img_src" id="u29702" data-orig-src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
+          <a class="nonblock nontext clip_frame grpelem" id="u29697" href="tel:(08)85225269"><!-- svg --><img class="svg temp_no_img_src" id="u29698" data-orig-src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
+         </div>
         </div>
-        <a class="nonblock nontext clip_frame grpelem shared_content" id="u29695" href="http://gawleruniting.org.au" data-content-guid="u29695_content"><!-- svg --><img class="svg temp_no_img_src" id="u29696" data-orig-src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
-        <a class="nonblock nontext clip_frame grpelem shared_content" id="u29701" href="https://www.facebook.com/gawlerunitingchurch" data-content-guid="u29701_content"><!-- svg --><img class="svg temp_no_img_src" id="u29702" data-orig-src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
-        <a class="nonblock nontext clip_frame grpelem shared_content" id="u29697" href="tel:(08)85225269" data-content-guid="u29697_content"><!-- svg --><img class="svg temp_no_img_src" id="u29698" data-orig-src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
        </div>
       </div>
      </div>
@@ -94,7 +98,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <!-- /m_editable -->
      <div class="colelem" id="u29633"><!-- simple frame --></div>
     </div>
-    <div class="verticalspacer" data-offset-top="460" data-content-above-spacer="460" data-content-below-spacer="124"></div>
+    <div class="verticalspacer" data-offset-top="460" data-content-above-spacer="717" data-content-below-spacer="123"></div>
     <a class="nonblock nontext clearfix grpelem shared_content" id="u29637-4" href="index.html" data-href="page:U782" data-content-guid="u29637-4_content"><!-- content --><p id="u29637-2">RETURN HOME</p></a>
     <div class="clearfix grpelem shared_content" id="pu30173-4" data-content-guid="pu30173-4_content"><!-- column -->
      <a class="nonblock nontext clearfix colelem" id="u30173-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p><span id="u30173">Return to Discipleship</span></p></a>
@@ -120,9 +124,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <span class="clearfix grpelem placeholder" data-placeholder-for="pu29693-3_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u29699-4_content"><!-- placeholder node --></span>
         <span class="clearfix grpelem placeholder" data-placeholder-for="pu29694-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clip_frame grpelem placeholder" data-placeholder-for="u29695_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clip_frame grpelem placeholder" data-placeholder-for="u29701_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clip_frame grpelem placeholder" data-placeholder-for="u29697_content"><!-- placeholder node --></span>
        </div>
       </div>
      </div>
@@ -131,7 +132,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <span class="clearfix grpelem placeholder" data-placeholder-for="u30728-15_content"><!-- placeholder node --></span>
     <!-- /m_editable -->
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu30727-4_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="650" data-content-above-spacer="650" data-content-below-spacer="124"></div>
+    <div class="verticalspacer" data-offset-top="650" data-content-above-spacer="717" data-content-below-spacer="124"></div>
     <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u29637-4_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu30173-4_content"><!-- placeholder node --></span>
    </div>
@@ -154,6 +155,6 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4159430777" type="text/javascript" async data-main="scripts/museconfig.js?crc=4179431180" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4159430777" type="text/javascript" async data-main="scripts/museconfig.js?crc=172512987" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
    </body>
 </html>
