--- a/events.html
+++ b/events.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Events</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=48520212"/>
-  <link rel="stylesheet" type="text/css" href="css/events.css?crc=3792833082" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4181031259"/>
+  <link rel="stylesheet" type="text/css" href="css/events.css?crc=146153560" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3931718497"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_events.css?crc=4058896359" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=443662475"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_events.css?crc=4188022138" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -30,10 +30,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/abel:n4:default;open-sans:n4:default.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/5nL5uYo7Gs9VYk6J2FGf-pkCwzvq6vZbIQik0s-MiajfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMghv-K339.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/xMDLuycvmawfQ5F6Z-rJLeh3m7HDc450IhCPxRU9cotfenSgfH06N6IPH2b3wDbhw2FLwDBR5QjtwQ8qjcm8jDjawhmcZ26oFhIXFAF8wDmKZQq-jKG0jcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOe4yjhlDieB1ZPo1jWiCZW4udc8X-Ao1OcNkZkoyiPUaiaS0jcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuJ68c-W4yOWFyd1w7f6RZn3IbMg6IJM4HgIuuShAbMZpdUvbB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -58,7 +58,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="ContainerGroup clearfix" id="u20403"><!-- stack box -->
        <div class="Container invi clearfix grpelem" id="u20404"><!-- group -->
         <div class="clearfix grpelem shared_content" id="pu20416-3" data-content-guid="pu20416-3_content"><!-- column -->
-         <a class="nonblock nontext museBGSize clearfix colelem" id="u20416-3" href="index.html" data-href="page:U782"><!-- content --><p>&nbsp;</p></a>
+         <div class="museBGSize clearfix colelem" id="u20416-3"><!-- content -->
+          <p>&nbsp;</p>
+         </div>
          <a class="nonblock nontext clearfix colelem" id="u22578-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u22578-2">FEATURED</p></a>
          <a class="nonblock nontext clip_frame colelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg temp_no_img_src" id="u20415" data-orig-src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
         </div>
@@ -77,15 +79,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="clearfix grpelem" id="u38787"><!-- column -->
-     <div class="clearfix colelem" id="u26422"><!-- column -->
-      <!-- m_editable region-id="editable-static-tag-U26212-BP_infinity" template="events.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rounded-corners clip_frame colelem" id="u26212" href="https://www.facebook.com/gawlerunitingchurch" data-muse-uid="U26212"><!-- svg --><img class="svg temp_no_img_src" id="u26210" data-orig-src="images/pasted-svg-837x313.svg?crc=523370987" alt="" data-mu-svgfallback="images/pasted%20svg%20837x313_poster_.png?crc=453620680" data-image-width="967" data-image-height="362" src="images/blank.gif?crc=4208392903"/></a>
-      <!-- /m_editable -->
-      <!-- m_editable region-id="editable-static-tag-U26334-BP_infinity" template="events.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rounded-corners clip_frame colelem" id="u26334" href="https://www.facebook.com/events/1846372052264943/" data-muse-uid="U26334"><!-- svg --><img class="svg temp_no_img_src" id="u26332" data-orig-src="images/pasted-svg-768x349.svg?crc=251991509" alt="" data-mu-svgfallback="images/pasted%20svg%20768x349_poster_.png?crc=4095911470" data-image-width="967" data-image-height="439" src="images/blank.gif?crc=4208392903"/></a>
-      <!-- /m_editable -->
-     </div>
+    <div class="clearfix grpelem" id="pu38770"><!-- column -->
      <!-- m_editable region-id="editable-static-tag-U38770-BP_infinity" template="events.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext rounded-corners clip_frame colelem" id="u38770" href="https://gawleruniting.churchcenteronline.com/registrations/events/43822" data-muse-uid="U38770"><!-- svg --><img class="svg temp_no_img_src" id="u38768" data-orig-src="images/pasted-svg-837x591.svg?crc=532097257" alt="" data-mu-svgfallback="images/pasted%20svg%20837x591_poster_.png?crc=13978896" data-image-width="967" data-image-height="683" src="images/blank.gif?crc=4208392903"/></a>
      <!-- /m_editable -->
@@ -102,7 +96,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <!-- /m_editable -->
      <div class="colelem shared_content" id="u6188" data-content-guid="u6188_content"><!-- simple frame --></div>
     </div>
-    <div class="verticalspacer" data-offset-top="1862" data-content-above-spacer="1862" data-content-below-spacer="80"></div>
+    <div class="verticalspacer" data-offset-top="1036" data-content-above-spacer="1035" data-content-below-spacer="80"></div>
     <a class="nonblock nontext rounded-corners clearfix grpelem shared_content" id="u5290-4" href="index.html" data-href="page:U782" data-content-guid="u5290-4_content"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
    </div>
   </div>
@@ -133,21 +127,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <span class="Title clearfix colelem placeholder" data-placeholder-for="u5482-4_content"><!-- placeholder node --></span>
      <!-- /m_editable -->
      <span class="colelem placeholder" data-placeholder-for="u6188_content"><!-- placeholder node --></span>
-     <div class="clearfix colelem temp_no_id" data-orig-id="u38787"><!-- column -->
-      <div class="clearfix colelem temp_no_id" data-orig-id="u26422"><!-- column -->
-       <!-- m_editable region-id="editable-static-tag-U26212-BP_415" template="events.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext rounded-corners clip_frame colelem temp_no_id" href="https://www.facebook.com/gawlerunitingchurch" data-muse-uid="U26212" data-orig-id="u26212"><!-- svg --><img class="svg temp_no_id temp_no_img_src" data-orig-src="images/pasted-svg-837x313.svg?crc=523370987" alt="" data-mu-svgfallback="images/pasted%20svg%20837x313_poster_.png?crc=453620680" data-image-width="365" data-image-height="137" data-orig-id="u26210" src="images/blank.gif?crc=4208392903"/></a>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U26334-BP_415" template="events.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext rounded-corners clip_frame colelem temp_no_id" href="https://www.facebook.com/events/1846372052264943/" data-muse-uid="U26334" data-orig-id="u26334"><!-- svg --><img class="svg temp_no_id temp_no_img_src" data-orig-src="images/pasted-svg-768x349.svg?crc=251991509" alt="" data-mu-svgfallback="images/pasted%20svg%20768x349_poster_.png?crc=4095911470" data-image-width="365" data-image-height="166" data-orig-id="u26332" src="images/blank.gif?crc=4208392903"/></a>
-       <!-- /m_editable -->
-      </div>
-      <!-- m_editable region-id="editable-static-tag-U38770-BP_415" template="events.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rounded-corners clip_frame colelem temp_no_id" href="https://gawleruniting.churchcenteronline.com/registrations/events/43822" data-muse-uid="U38770" data-orig-id="u38770"><!-- svg --><img class="svg temp_no_id temp_no_img_src" data-orig-src="images/pasted-svg-837x591.svg?crc=532097257" alt="" data-mu-svgfallback="images/pasted%20svg%20837x591_poster_.png?crc=13978896" data-image-width="365" data-image-height="258" data-orig-id="u38768" src="images/blank.gif?crc=4208392903"/></a>
-      <!-- /m_editable -->
-      <div class="rounded-corners clip_frame colelem temp_no_id" data-orig-id="u38779"><!-- svg -->
-       <img class="svg temp_no_id temp_no_img_src" data-orig-src="images/pasted-svg-900x220.svg?crc=4265201650" alt="" data-mu-svgfallback="images/pasted%20svg%20900x220_poster_.png?crc=4024587706" data-image-width="365" data-image-height="90" data-orig-id="u38777" src="images/blank.gif?crc=4208392903"/>
-      </div>
+     <!-- m_editable region-id="editable-static-tag-U38770-BP_415" template="events.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext rounded-corners clip_frame colelem temp_no_id" href="https://gawleruniting.churchcenteronline.com/registrations/events/43822" data-muse-uid="U38770" data-orig-id="u38770"><!-- svg --><img class="svg temp_no_id temp_no_img_src" data-orig-src="images/pasted-svg-837x591.svg?crc=532097257" alt="" data-mu-svgfallback="images/pasted%20svg%20837x591_poster_.png?crc=13978896" data-image-width="365" data-image-height="258" data-orig-id="u38768" src="images/blank.gif?crc=4208392903"/></a>
+     <!-- /m_editable -->
+     <div class="rounded-corners clip_frame colelem temp_no_id" data-orig-id="u38779"><!-- svg -->
+      <img class="svg temp_no_id temp_no_img_src" data-orig-src="images/pasted-svg-900x220.svg?crc=4265201650" alt="" data-mu-svgfallback="images/pasted%20svg%20900x220_poster_.png?crc=4024587706" data-image-width="365" data-image-height="90" data-orig-id="u38777" src="images/blank.gif?crc=4208392903"/>
      </div>
     </div>
     <span class="anchor_item grpelem placeholder" data-placeholder-for="top_content"><!-- placeholder node --></span>
@@ -173,6 +157,6 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4159430777" type="text/javascript" async data-main="scripts/museconfig.js?crc=4179431180" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4159430777" type="text/javascript" async data-main="scripts/museconfig.js?crc=172512987" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
    </body>
 </html>
