--- a/going-deeper.html
+++ b/going-deeper.html
@@ -17,11 +17,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Going Deeper</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=48520212"/>
-  <link rel="stylesheet" type="text/css" href="css/going-deeper.css?crc=159921102" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4181031259"/>
+  <link rel="stylesheet" type="text/css" href="css/going-deeper.css?crc=4225331675" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3931718497" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=443662475" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -29,10 +29,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/abel:n4:default;open-sans:n4:default.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/3lVKtwHv6AJlnr6dM6Hzld6gHMIEm5A29moX7vp7fH6feCtgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MKGHfFEzMsMMeMX6MqGIQWmDZZMgoC-K339.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/G8g34xbrhlutFGJnLf4RB8sjyX3qyOSXjeEKZSRPAIjfeCvgfH06N6IPH2b3wDbhw2FLwDBR5QjtwQ8qjcm8jDjawhmcZ26oFhIXFAF8wDmKZQq-jKG0jcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOe4yjhlDieB1ZPo1jWiCZW4udc8X-Ao1OcNkZkoyiPUaiaS0jcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuJ68c-W4yOWFyd1w7f6RZn3IbMg6IJMJ7f6Rin3IbMg62JMJ7f6Rpn3IbMg6FJM4HgIuuShAbM-edUvbB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -56,7 +56,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="ContainerGroup clearfix" id="u20403"><!-- stack box -->
       <div class="Container invi clearfix grpelem" id="u20404"><!-- group -->
        <div class="clearfix grpelem" id="pu20416-3"><!-- column -->
-        <a class="nonblock nontext clearfix colelem" id="u20416-3" href="index.html" data-href="page:U782"><!-- content --><p>&nbsp;</p></a>
+        <div class="clearfix colelem" id="u20416-3"><!-- content -->
+         <p>&nbsp;</p>
+        </div>
         <a class="nonblock nontext clearfix colelem" id="u22578-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u22578-2">FEATURED</p></a>
         <a class="nonblock nontext clip_frame colelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg" id="u20415" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
        </div>
@@ -100,7 +102,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- /m_editable -->
     <div class="colelem" id="u6188"><!-- simple frame --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="314" data-content-above-spacer="313" data-content-below-spacer="80"></div>
+   <div class="verticalspacer" data-offset-top="314" data-content-above-spacer="717" data-content-below-spacer="80"></div>
    <a class="nonblock nontext clearfix grpelem" id="u5290-4" href="index.html" data-href="page:U782"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
@@ -121,6 +123,6 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4159430777" type="text/javascript" async data-main="scripts/museconfig.js?crc=4179431180" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4159430777" type="text/javascript" async data-main="scripts/museconfig.js?crc=172512987" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
    </body>
 </html>
