--- a/start-ol.html
+++ b/start-ol.html
@@ -17,18 +17,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Start OL</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master-blank.css?crc=84526259"/>
-  <link rel="stylesheet" type="text/css" href="css/start-ol.css?crc=3978100849" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master-blank.css?crc=452200453"/>
+  <link rel="stylesheet" type="text/css" href="css/start-ol.css?crc=465721726" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/abel:n4:default;open-sans:n4:default.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/DI999r81TLbt2R1OEXyOkLeqAB7vBBLcsAJFsCt-AgMfeCtgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MKGHfFEzMsMMeMX6MqGIQWmDZZMgySpK339.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/yYAIDG_caXEJ7EaHSRxJV2GxmytqN1fPb-bVUImB2aIfeCvgfH06N6IPH2b3wDbhw2FLwDBR5QjtwQ8qjcm8jDjawhmcZ26oFhIXFAF8wDmKZQq-jKG0jcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOe4yjhlDieB1ZPo1jWiCZW4udc8X-Ao1OcNkZkoyiPUaiaS0jcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuJ68c-W4yOWFyd1w7f6RZn3IbMg6IJMJ7f6Rin3IbMg62JMJ7f6Rpn3IbMg6FJM4HgIuuShAbMdKdUvbB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -52,7 +52,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="ContainerGroup clearfix" id="u33253"><!-- stack box -->
       <div class="Container invi clearfix grpelem" id="u33254"><!-- group -->
        <div class="clearfix grpelem" id="pu33259-3"><!-- column -->
-        <a class="nonblock nontext museBGSize clearfix colelem" id="u33259-3" href="index.html" data-href="page:U782"><!-- content --><p>&nbsp;</p></a>
+        <div class="museBGSize clearfix colelem" id="u33259-3"><!-- content -->
+         <p>&nbsp;</p>
+        </div>
         <a class="nonblock nontext clearfix colelem" id="u33265-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u33265-2">FEATURED</p></a>
         <a class="nonblock nontext clip_frame colelem" id="u33260" href="http://gawleruniting.org.au"><!-- svg --><img class="svg" id="u33261" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
        </div>
@@ -162,6 +164,6 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4159430777" type="text/javascript" async data-main="scripts/museconfig.js?crc=4179431180" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4159430777" type="text/javascript" async data-main="scripts/museconfig.js?crc=172512987" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
    </body>
 </html>
