--- a/sermon.html
+++ b/sermon.html
@@ -17,18 +17,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Sermon</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=48520212"/>
-  <link rel="stylesheet" type="text/css" href="css/sermon.css?crc=513489713" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4181031259"/>
+  <link rel="stylesheet" type="text/css" href="css/sermon.css?crc=4264567459" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/abel:n4:default;open-sans:n4:default.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/mDwGfrI6hwCtTNEt7-Wpv_iR3i8qkBKwM-RQolew82bfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMghS-K339.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/zWyb3NCRR5gvK8tKj82H3bqfQtA8kwGXvTQuCGzn1-3fenSgfH06N6IPH2b3wDbhw2FLwDBR5QjtwQ8qjcm8jDjawhmcZ26oFhIXFAF8wDmKZQq-jKG0jcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOe4yjhlDieB1ZPo1jWiCZW4udc8X-Ao1OcNkZkoyiPUaiaS0jcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuJ68c-W4yOWFyd1w7f6RZn3IbMg6IJM4HgIuuShAbMZAdUvbB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -52,7 +52,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="ContainerGroup clearfix" id="u20403"><!-- stack box -->
       <div class="Container invi clearfix grpelem" id="u20404"><!-- group -->
        <div class="clearfix grpelem" id="pu20416-3"><!-- column -->
-        <a class="nonblock nontext museBGSize clearfix colelem" id="u20416-3" href="index.html" data-href="page:U782"><!-- content --><p>&nbsp;</p></a>
+        <div class="museBGSize clearfix colelem" id="u20416-3"><!-- content -->
+         <p>&nbsp;</p>
+        </div>
         <a class="nonblock nontext clearfix colelem" id="u22578-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u22578-2">FEATURED</p></a>
         <a class="nonblock nontext clip_frame colelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg" id="u20415" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
        </div>
@@ -110,7 +112,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <p>Recent sermons from the 5pm service</p>
    </div>
    <!-- /m_editable -->
-   <div class="verticalspacer" data-offset-top="641" data-content-above-spacer="640" data-content-below-spacer="80"></div>
+   <div class="verticalspacer" data-offset-top="641" data-content-above-spacer="717" data-content-below-spacer="80"></div>
    <a class="nonblock nontext rounded-corners clearfix grpelem" id="u5290-4" href="index.html" data-href="page:U782"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
@@ -131,6 +133,6 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4159430777" type="text/javascript" async data-main="scripts/museconfig.js?crc=4179431180" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4159430777" type="text/javascript" async data-main="scripts/museconfig.js?crc=172512987" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
    </body>
 </html>
